--- a/assets/style.scss
+++ b/assets/style.scss
@@ -485,9 +485,13 @@ a {
 }
 
 .ytvid {
+  display: flex;
   padding-left: 2vw;
   padding-right: 2vw;
+  margin-left: auto;
+  margin-right: auto;
   width: 80vw;
+  align-self: center;
   height: 50vh;
 }
 /* ----------- .insta icon + theme ------- */
