--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins&family=Roboto&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css");
+@import "./theme.scss";
 /* 
     font-family: 'DM Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
