moved icons up a bit for aliginment purposes

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -490,6 +490,9 @@ a {
   align-self: center;
   height: 50vh;
 }
+.icon {
+  padding-bottom: 2px;
+}
 /* ----------- .insta icon + theme ------- */
 /* ----------- sidebar page ------- */
 #sidebar .categories a {
