tweaks and optimzations for screen readers and seo

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -577,7 +577,7 @@ a {
   }
   .nav-brand {
     position: relative;
-    left: 20px;
+    // left: 20px;
   }
 
   #site-main {
@@ -594,7 +594,7 @@ a {
   }
   .nav-brand {
     position: relative;
-    left: 20px;
+    // left: 20px;
   }
 
   .col-3 {
@@ -615,7 +615,7 @@ a {
   }
   .nav-brand {
     position: relative;
-    left: 20px;
+    // left: 20px;
   }
   .collapse {
     max-height: 0;
