--- a/assets/style.scss
+++ b/assets/style.scss
@@ -21,8 +21,8 @@
   --shadow: none;
   --opac: 0.9;
   --grad: linear-gradient(to right, #ff007f, #00ffff);
-  // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/sun.png");
-  // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicowhite.png");
+  // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/sun.png&il&af");
+  // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicowhite.png&il&af");
 }
 .preloader {
   position: fixed;
