--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -11,8 +11,8 @@
       --opac: 1;
       --topcol: white;
       --grad: none;
-      // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/moon.png");
-      // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicoblack.png");
+      // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/moon.png&il&af");
+      // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicoblack.png&il&af");
     }
   }
   @media screen {
@@ -28,8 +28,8 @@
       --shadow: none;
       --opac: 0.9;
       --grad: linear-gradient(to right, #ff007f, #00ffff);
-      // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/sun.png");
-      // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicowhite.png");
+      // --theme-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/themes/sun.png&il&af");
+      // --insta-ico: url("https://ik.imagekit.io/1vyqdxrhm/assets/images/social/instaicowhite.png&il&af");
     }
   }
 }
